# rofi-jetbrains

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  default.nix  flake.nix  knope.toml  result  shell.nix  test.rasi
.cargo/: config.toml
.changes/: NIX_FLAKE.md  SYMLINK_SUPPORT.md  UPDATE_DEPS.md  config.json  feat-ide-aliases.md  refactor-ide-resolver.md  refactor-xrmoptions.md
.changeset/: add_ability_to_build_plugin_for_abi_version_7.md  add_installation_and_usage_documentation.md  add_nix_flakes_for_the_plugin.md  add_option_to_use_nix_devshell_in_clion_projects.md  add_support_for_symlinks.md  fix_behavior_of_looking_up_the_config_path_in_properties_files.md  fix_build_errors.md  fix_mismatched_icons_when_rapidly_opening_and_closing_the_plugin.md  improve_build_speeds_of_nix_package.md  improve_plugin_load_times.md
.github/workflows/: cache.yml  cd.yml  ci.yml  release.yml
.run/: Debug.run.xml  Release.run.xml  Run Flake Rofi (All logs).run.xml  Run Flake Rofi.run.xml  Run Rofi (All logs).run.xml  Run Rofi (Debug logs).run.xml  Run Rofi.run.xml
src/: config.rs  error.rs  ide.rs  lib.rs  macros.rs  recent_project.rs  traits.rs
src/ide/: data.rs  mod.rs  product_info.rs  properties.rs
src/ide/de/: mod.rs
src/rofi/: helper.rs  mod.rs
src/rofi/ffi/: mod.rs  xrmoptions.rs
src/rofi/xrmoptions/: impls.rs  mod.rs  traits.rs
