[package]
name = "rofi-jetbrains"
version = "1.0.0"
description = "A rofi plugin that adds the ability to launch recent projects in JetBrains IDEs"
authors = ["Krzysztof Saczuk <me@krzysztofsaczuk.pl>"]
edition = "2021"
repository = "https://github.com/zakuciael/rofi-jetbrains"
readme = "README.md"
license-file = "LICENSE"
keywords = ["rofi", "plugin", "rofi-plugin", "jetbrains"]

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true

[dependencies]
amxml = "0.5.3"
chrono = "0.4.31"
glib = { version = "0.18.2", features = ["log_macros"] }
globmatch = "0.2.5"
itertools = "0.11.0"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
resolve-path = "0.1.0"
rofi-mode = "0.3.1"
