[package]
name = "rofi-jetbrains"
version = "2.0.0"
description = "A rofi plugin that adds the ability to launch recent projects in JetBrains IDEs"
authors = [ "Krzysztof Saczuk <me@krzysztofsaczuk.pl>" ]
edition = "2021"
repository = "https://github.com/zakuciael/rofi-jetbrains"
readme = "README.md"
license-file = "LICENSE"
keywords = [ "rofi", "plugin", "rofi-plugin", "jetbrains" ]

[lib]
crate-type = [ "cdylib" ]

[profile.release]
strip = true

[dependencies]
amxml = "0.5.3"
chrono = "0.4.31"
dirs = "5.0.1"
glib = { version = "0.19.6", features = [ "log_macros" ] }
itertools = "0.12.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
resolve-path = "0.1.0"
rofi-mode = "0.4.0"
serde = { version = "1.0.188", features = [ "derive" ] }
serde-java-properties = "0.2.0"
serde_json = "1.0.107"
strum = { version = "0.26.2", features = [ "derive" ] }
wax = "0.6.0"
